# cppTemplate

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
cmake/: runCoverage.cmake  setSanitizers.cmake
scripts/: clean_project.sh  coverage.sh  cppcheck.sh  valgrind.sh
src/: CMakeLists.txt  main.cpp
src/src/: main.cpp
tests/: CMakeLists.txt  hello_test.cpp
